# document-pipeline

./: .env.example  .gitignore  =1.0.0  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  INVARIANTS.md  OVERVIEW.md  README.md  RUNBOOK.md  SYSTEM_MAP.md  USER_GUIDE.md  check_weaviate_api.py  documentation_plan.md  pipeline_progress_summary.md  pyproject.toml  requirements.txt  verify_weaviate_connection.py
.agent/: handoff.md
cli/: media_cli.py  weav_cli.py
data/output/: process_standards_pdfs.sh  pymupdf_processing_progress.json  pymupdf_test_results.json  recommended_processing.sh  standards_analysis.json  standards_analysis_index.json  standards_analysis_summary.md  subject_briefs_pymupdf_test_results.json
doc_processing/: config.py  document_pipeline.py
doc_processing/embedding/: base.py  schema_manager.py  weaviate_client.py
doc_processing/llm/: anthropic_client.py  base.py  clients.py  gemini_client.py
doc_processing/loaders/: base.py  docx_loader.py  image_loader.py  json_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py  video_loader.py  youtube_loader.py
doc_processing/models/: document_schemas.py  schema.py
doc_processing/processors/: __init__.py  base.py  claude_pdf_processor.py  deepgram_processor.py  docx_processor.md  (+8 more)
docs/: CLAUDE_CODE_WORKFLOW.md  COMMANDS.md  OVERVIEW.md  README.md  USER_GUIDE.md  weaviate_layer.md
notebooks/: 01_pdf_to_text_demo.ipynb  02_hybrid_pdf_processing.ipynb  04_end_to_end_pipeline_demo.ipynb
scripts/: README.md  README_markitdown.md  README_weaviate_mcp.md  REORGANIZATION_PLAN.md  batch_process.py  create_cleaned_json.py  delete_adaptive_schools_collection.py  direct_docx_markitdown.py  direct_markitdown.py  download_punkt_tab.py  fix_markdown_formatting.py  fix_markdown_headers.py  markdown_to_json.py  query_adaptive_schools.py  run_pipeline.py  split_chapters.py  test_enhanced_docling.py  test_pymupdf_simple.py  test_yt_dlp_standalone.py
slides/: team_deck.pptx
tests/: test_chunker.py  test_document_pipeline.py  test_media_processing.py  test_run_pipeline_cli.py  test_weaviate_layer.py  test_youtube_loader.py
weaviate_layer/: client.py  collections.py  config.py  manage_collections.py  schema.py
(+753 files in other folders)
