[tool.poetry]
name = "document-pipeline"
version = "1.0.0"
description = "A powerful, modular document processing framework that transforms various document formats into structured outputs with optional vector database storage"
authors = ["Document Pipeline Contributors"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/pipeline-documents"
repository = "https://github.com/yourusername/pipeline-documents"
documentation = "https://github.com/yourusername/pipeline-documents/tree/main/docs"
keywords = ["document-processing", "pdf", "ocr", "weaviate", "nlp", "docling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "doc_processing"}]

[tool.poetry.dependencies]
python = "^3.10"
weaviate-client = "^4.14.1"
typer = "^0.15.2"
pydantic-settings = "^2.9.1"
tenacity = "^9.1.2"
yt-dlp = "^2025.3.31"
langchain = ">=0.3,<0.4"
mammoth = "^1.6.0"
markdownify = "^0.12.0"
markitdown = {extras = ["pptx"], version = "^0.1.0"}
openpyxl = "^3.1.2"
pandas = "^2.2.0"
PyMuPDF = "^1.24.0"
ffmpeg-python = "^0.2.0"
python-docx = "^1.2.0"
tqdm = "^4.67.1"
instructor = "^1.10.0"
deepl = "^1.22.0"
youtube-transcript-api = {version = "~1.2.2", python = ">=3.10,<3.14"}
docling = "^2.57.0"
google-genai = "^1.45.0"
anthropic = "^0.70.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"